# CudaPractice

./: .gitignore  CMakeLists.txt  README.md  main.cpp
0_elementwise/: CMakeLists.txt  elementwise.cu
1_reduce/: CMakeLists.txt  reduce_0.cu  reduce_0_report.ncu-rep  reduce_1.cu  reduce_global.cu  reduce_naive.cu
2_gemv/: CMakeLists.txt
3_transpose/: CMakeLists.txt  transpose_1.cu  transpose_naive.cu  transpose_naive.ncu-rep
4_gemm/: CMakeLists.txt  gemm_0_global.cu
include/: CMakeLists.txt  utils.cpp  utils.hpp
