find_package(CUDAToolkit REQUIRED)

add_executable(transpose_naive transpose_naive.cu)
target_link_libraries(transpose_naive PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(transpose_naive PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G>)
endif()
target_compile_options(transpose_naive PRIVATE -lineinfo)

add_executable(transpose_1 transpose_1.cu)
target_link_libraries(transpose_1 PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(transpose_1 PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G>)
endif()
target_compile_options(transpose_1 PRIVATE -lineinfo)